# Airtime

./: INSTALL  README
audio_samples/Jamendo/Pretonika - Fatness/: License.txt
audio_samples/Jamendo/ZamalSka/: License.txt
audio_samples/Jamendo/Ильмера - Секреты/: License.txt
audio_samples/OpSound/: LICENSE.txt
audio_samples/Sourcefabric/: LICENSE.txt
campcaster/: INSTALL  configure
campcaster/doc/: developmentTools.html  gettingStarted.html  index.html  install.html  installUbuntu.html  liveCdHowto.html  release.html  repositoryCdHowto.html  studioLocalization.html  userLocalizationInstructions.html
campcaster/doc/developmentEnvironment/: autoconfConfigureConventions.html  buildEnvironment.html  cxxHeaderFileConventions.html  cxxSourceFileConventions.html  directoryStructure.html  fileConventions.html  htmlFileConventions.html  index.html  installation.html  makefileConventions.html  phpFileConventions.html  shellScriptConventions.html
campcaster/doc/doxygen/: xmlrpc++.tag
campcaster/doc/gui/: gladeConventions.html
campcaster/doc/model/: index.html
campcaster/etc/: Makefile.in  configure.ac  doxygen.config  feisty-1.2.1.patch  xmlrpc-doxygen.config
campcaster/etc/debian/: campcaster-station.postinst  campcaster-station.postrm  campcaster-studio.desktop  campcaster-studio.menu  control  livesupport-studio.conffiles  livesupport-studio.desktop  livesupport-studio.menu  rules
campcaster/usr/include/: SerialStream.h  SerialStreamBuf.h
campcaster/usr/lib/: libgstapp-0.10.so.0.0.0  libgstaudio-0.10.so.0.11.0  libgstbase-0.10.so.0  libgstbase-0.10.so.0.14.0  libgstcdda-0.10.so.0.11.0  libgstcontroller-0.10.so.0  libgstcontroller-0.10.so.0.14.0  libgstdataprotocol-0.10.so.0.14.0  libgstfft-0.10.so.0  libgstfft-0.10.so.0.11.0  libgstinterfaces-0.10.so.0.11.0  libgstnet-0.10.so.0.14.0  libgstnetbuffer-0.10.so.0.11.0  libgstpbutils-0.10.so.0  libgstpbutils-0.10.so.0.11.0  libgstreamer-0.10.so.0.14.0  libgstriff-0.10.so.0  libgstriff-0.10.so.0.11.0  libgstrtp-0.10.so.0.11.0  libgstrtsp-0.10.so.0  libgstrtsp-0.10.so.0.11.0  libgstsdp-0.10.so.0  libgstsdp-0.10.so.0.11.0  libgsttag-0.10.so.0.11.0  libgstvideo-0.10.so.0  libgstvideo-0.10.so.0.11.0  libodbc++-mt.so.4  libodbc++-mt.so.4.0.0  liboil-0.3.so.0.1.0  libserial.so.0.0.0  libtag.so.1.4.0  libtag_c.so.0.0.0  libxmlrpc++.so.0  libxmlrpc++.so.0.0.0
campcaster/usr/tmp/: campcasterStudioStorageClient2856c79e235328c4-1395263762.smil  campcasterStudioStorageClient4f8cf1cad1c69e3f-1994840483.smil  campcasterStudioStorageClient4f8cf1cad1c69e3f-959997301.smil  campcasterStudioStorageClient57cdf03111a7c8e2-522087341.smil  campcasterStudioStorageClient6b36c9b717fa338f-1330573317.smil  campcasterStudioStorageClient6b36c9b717fa338f-151362779.smil  campcasterStudioStorageClient6c144a50f3347750-1199700427.smil  campcasterStudioStorageClient6c144a50f3347750-1330573317.smil  campcasterStudioStorageClient6c144a50f3347750-1595518104.smil  campcasterStudioStorageClient6c144a50f3347750-1687926652.smil  campcasterStudioStorageClient6c144a50f3347750-462321751.smil  campcasterStudioStorageClient6c144a50f3347750-59879502.smil  campcasterStudioStorageClient6c144a50f3347750-603570492.smil  campcasterStudioStorageClient6c144a50f3347750-660260756.smil
campcaster/var/python/: serbianLatinToCyrillicConverter.py
debian/: changelog  control
etc/: Makefile.in
livesupport/: configure
livesupport/etc/: Makefile.in  acinclude.m4  configure.ac  postgresql.conf
livesupport/etc/debian/: changelog  control  livesupport-station.postrm  rules
livesupport/modules/alib/: configure
livesupport/modules/archiveServer/: configure
livesupport/modules/core/: configure
livesupport/modules/htmlUI/etc/: Makefile.in  configure.ac
(+1851 files in other folders)
